--- a/index copy.html
+++ b/index copy.html
@@ -5,41 +5,41 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Gorjeta</title>
+  <title>Tip</title>
 </head>
 <body>
   <script src="function.js"></script>
     <div class="grid">
       <div class="square">
         <img src="pay.png" alt="tipping">
-        <h1>Calcular Gorjeta</h1>
+        <h1>Tip Calculator</h1>
         <div class="input-container">
-          <label for="price">Valor</label>
+          <label for="price">Price</label>
           <input type="number" id="price">
         </div>
         <br>
         <div class="input-container">
-          <label for="tip">Gorjeta %</label>
+          <label for="tip">Tip %</label>
           <input type="number" name="" id="tip">
         </div>  
         <br>
         <div class="input-container">
-          <label for="numberpeoples">Total de Pessoas</label>
+          <label for="numberpeoples">Number of People</label>
           <input type="number" id="peoples" />
         </div>
         <br>
         <div class="button-container">
-          <button class="calculate" onclick="calculateTip()">Calcular</button>
-          <button class="clear" onclick="clearForm()">Limpar</button>
+          <button class="calculate" onclick="calculateTip()">Calculate</button>
+          <button class="clear" onclick="clearForm()">Clear</button>
         </div>      
-        <h2>Resultado</h2>
+        <h2>Result</h2>
         <div class="input-container">
-          <label for="result">Valor da Gorjeta $</label>
+          <label for="result">Value Tip $</label>
           <input type="text" name="" id="result" />
         </div>
         <br>
         <div class="input-container">
-          <label for="totalbill">Total a Pagar por Pessoa</label>
+          <label for="totalbill">Total bill with tip</label>
           <input type="text" id="bill" />
         </div>
       <footer>
